fixed : welcome overlay not showing issue

--- a/src/components/animated overlay/animatedOverlay.scss
+++ b/src/components/animated overlay/animatedOverlay.scss
@@ -13,6 +13,7 @@
 
     display: grid;
     place-items: center;
+    transform: translateY(0);
 
     &__text {
         display: flex;
